Minor bugfix: firefox edit field too small

--- a/public/less/editor.less
+++ b/public/less/editor.less
@@ -269,6 +269,7 @@ body {
 	}
 	.manipulator-textarea {
 		position:absolute;
+		overflow:hidden;
 	}
 	@button-radius: 20px;
 	#work-area-design {
